[gd_scene load_steps=8 format=3 uid="uid://d0fw7n2i7hwjc"]

[ext_resource type="Script" path="res://endscreen/endscreen.gd" id="1_6xcki"]
[ext_resource type="Texture2D" uid="uid://rktk216g288h" path="res://endscreen/endscreen.png" id="2_vjs0f"]
[ext_resource type="Theme" uid="uid://bogu2qbnnilwk" path="res://font.tres" id="3_j0g2o"]
[ext_resource type="FontFile" uid="uid://dyk73nod4bivv" path="res://fonts/monogram.ttf" id="4_u7y7m"]

[sub_resource type="Animation" id="Animation_7pjtj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("STORY:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Result1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Money1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Result2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Money2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Result3:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Money3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Result4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Money4:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Result5:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Money5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Result6:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Money6:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Result7:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Money7:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Result8:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Money8:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Result9:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Money9:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n07gs"]
resource_name = "finish"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("STORY:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Result1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Money1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Result2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Money2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Result3:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Money3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 5.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Result4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Money4:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Result5:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Money5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Result6:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 6.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Money6:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 6.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Result7:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 6.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Money7:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 6.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Result8:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 7.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Money8:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 7.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Result9:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Money9:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkx2u"]
_data = {
"RESET": SubResource("Animation_7pjtj"),
"finish": SubResource("Animation_n07gs")
}

[node name="endscreen" type="Node2D"]
script = ExtResource("1_6xcki")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tkx2u")
}

[node name="Endscreen" type="Sprite2D" parent="."]
position = Vector2(192, 108)
texture = ExtResource("2_vjs0f")

[node name="STORY" type="Label" parent="."]
offset_left = 72.0
offset_top = 63.0
offset_right = 314.0
offset_bottom = 89.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "PLACEHOLDER TEXT PLACE HOLDER TEXT LOREM IPSUM 
PLACEHOLDER TEXT PLACE HOLDER TEXT LOREM IPSUM"

[node name="20" type="Label" parent="."]
offset_left = 131.0
offset_top = 17.0
offset_right = 258.0
offset_bottom = 36.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 10
text = "END OF"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 131.0
offset_top = 26.0
offset_right = 258.0
offset_bottom = 53.0
theme = ExtResource("3_j0g2o")
theme_override_fonts/font = ExtResource("4_u7y7m")
theme_override_font_sizes/font_size = 25
text = "Day 1"
horizontal_alignment = 1

[node name="Money1" type="Label" parent="."]
offset_left = 196.0
offset_top = 94.0
offset_right = 267.0
offset_bottom = 107.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money2" type="Label" parent="."]
visible = false
offset_left = 196.0
offset_top = 105.0
offset_right = 267.0
offset_bottom = 118.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money3" type="Label" parent="."]
offset_left = 196.0
offset_top = 116.0
offset_right = 267.0
offset_bottom = 129.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money4" type="Label" parent="."]
offset_left = 196.0
offset_top = 127.0
offset_right = 267.0
offset_bottom = 140.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money5" type="Label" parent="."]
offset_left = 196.0
offset_top = 138.0
offset_right = 267.0
offset_bottom = 151.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money6" type="Label" parent="."]
offset_left = 196.0
offset_top = 149.0
offset_right = 267.0
offset_bottom = 162.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money7" type="Label" parent="."]
offset_left = 196.0
offset_top = 159.0
offset_right = 267.0
offset_bottom = 172.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money8" type="Label" parent="."]
offset_left = 196.0
offset_top = 169.0
offset_right = 267.0
offset_bottom = 182.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Money9" type="Label" parent="."]
offset_left = 196.0
offset_top = 187.0
offset_right = 267.0
offset_bottom = 200.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "$0"
horizontal_alignment = 2

[node name="Result9" type="Label" parent="."]
offset_left = 106.0
offset_top = 187.0
offset_right = 177.0
offset_bottom = 200.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "NET INCOME"

[node name="Result1" type="Label" parent="."]
offset_left = 106.0
offset_top = 94.0
offset_right = 177.0
offset_bottom = 107.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "EVALUATION #1
"

[node name="Result2" type="Label" parent="."]
offset_left = 106.0
offset_top = 105.0
offset_right = 177.0
offset_bottom = 118.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "EVALUATION #2"

[node name="Result3" type="Label" parent="."]
offset_left = 106.0
offset_top = 116.0
offset_right = 177.0
offset_bottom = 129.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "EVALUATION #3
"

[node name="Result4" type="Label" parent="."]
offset_left = 106.0
offset_top = 127.0
offset_right = 177.0
offset_bottom = 140.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "EVALUATION #4"

[node name="Result5" type="Label" parent="."]
offset_left = 106.0
offset_top = 138.0
offset_right = 177.0
offset_bottom = 151.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "EVALUATION #5"

[node name="Result6" type="Label" parent="."]
offset_left = 106.0
offset_top = 149.0
offset_right = 177.0
offset_bottom = 162.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "FOOD"

[node name="Result7" type="Label" parent="."]
offset_left = 106.0
offset_top = 159.0
offset_right = 177.0
offset_bottom = 172.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "UTILITY"

[node name="Result8" type="Label" parent="."]
offset_left = 106.0
offset_top = 169.0
offset_right = 177.0
offset_bottom = 182.0
theme = ExtResource("3_j0g2o")
theme_override_font_sizes/font_size = 8
text = "TAXES"
